--- a/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
+++ b/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.EventoEN
 
 @{
-    ViewBag.Title = "Por Filtro";
+    ViewBag.Title = "Eventos filtrados";
 }
 
-<h2>Por Filtro</h2>
+<h2>Eventos filtrados por categoría y/o fecha</h2>
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
