--- a/MVC_MultitecUA/Views/Servicio/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Borrar";
 }
 
-<h2>Borrar</h2>
+<h2>Borrar servicio: @ViewData["servicio"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
