--- a/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Create.cshtml
@@ -4,55 +4,57 @@
     ViewBag.Title = "Crear";
 }
 
-<h2>Crear</h2>
+<h2>Crear Recuerdo</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Recuerdos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    
 
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" }})
+                    @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextArea("Cuerpo",new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <!-- <div class="form-group">
+                Html.LabelFor(model => model.IdEvento, htmlAttributes: new { class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input class="form-control" type="text" name="IdEvento" value="ViewData["idevento"]"/>
+                    Html.ValidationMessageFor(model => model.IdEvento, "", new { class = "text-danger" })
+                </div>
+            </div> -->
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Crear" class="btn btn-default" />
+                </div>
+            </div>
         </div>
+    }
+
+    <div>
+        @Html.ActionLink("Volver a la lista", "Index")
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <!-- <div class="form-group">
-        Html.LabelFor(model => model.IdEvento, htmlAttributes: new { class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <input class="form-control" type="text" name="IdEvento" value="ViewData["idevento"]"/>
-            Html.ValidationMessageFor(model => model.IdEvento, "", new { class = "text-danger" })
-        </div>
-    </div> -->
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Crear" class="btn btn-default" />
-        </div>
-    </div>
-</div>
-}
-
-<div>
-    @Html.ActionLink("Volver a la lista", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
