--- a/MVC_MultitecUA/Views/Recuerdo/CreateNoId.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/CreateNoId.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Crear Recuerdo";
 }
 
-<h2>CreateNoId</h2>
+<h2>Crear Recuerdo</h2>
+
+
 
 
 @using (Html.BeginForm())
@@ -12,12 +14,11 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Creando recuerdo</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Titulo, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextArea("Cuerpo", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +35,12 @@
             @Html.LabelFor(model => model.IdEvento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.IdEvento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IdEvento, "", new { @class = "text-danger" })
+                @{
+                    if (TempData.ContainsKey("nocreado"))
+                    {
+                        <p class="text-danger"><!--<span class="glyphicon glyphicon-remove-sign"></span>-->La ID del evento no existe</p>
+                    }
+                }
             </div>
         </div>
 
@@ -49,7 +55,7 @@
 
 
 <div>
-    @Html.ActionLink("Volver a eventos", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 
