--- a/MVC_MultitecUA/Views/Recuerdo/porEvento.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/porEvento.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MVC_MultitecUA.Models.Recuerdo>
 
 @{
-    ViewBag.Title = "Por Evento";
+    ViewBag.Title = "Filtro de recuerdos por evento";
 }
 
 <h2>Recuerdos de @ViewData["nombreEvento"]</h2>
@@ -40,9 +40,9 @@
             @Html.DisplayFor(modelItem => item.NombreEvento)
         </td>
         <td>
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
-            @Html.ActionLink("Detalles", "Details", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri }) |
-            @Html.ActionLink("Borrar", "Delete", new { id = item.Id, url = @HttpContext.Current.Request.Url.AbsoluteUri })
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id}) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id}) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id})
         </td>
     </tr>
 }
@@ -50,5 +50,5 @@
 </table>
 
 <div>
-    @Html.ActionLink("Volver al Evento", "Details", "Evento", new { id = @ViewData["idevento"] }, null)
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
