--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -1,22 +1,22 @@
 ﻿@model  IEnumerable<MVC_MultitecUA.Models.Servicio>
 
 @{
-    ViewBag.Title = "PorEstado";
+    ViewBag.Title = "Servicios filtrados por estado";
 }
 
-<h2>Filtro por Estado: @ViewData["filtroEstado"]</h2>
+<h2>Servicios filtrados por estado: @ViewData["filtroEstado"]</h2>
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-    @Html.ActionLink("Crear", "Create")
+    @Html.ActionLink("Nuevo servicio", "Create")
     @using (Html.BeginForm("PorEstado", "Servicio"))
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-group form-inline">
                 <div class="col-md-10">
-                    <label>Filtrar por: </label>
+                    <label>Filtrar por estado: </label>
                     @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
                     <input type="submit" value="Buscar" class="btn btn-default" />
                 </div>
@@ -36,29 +36,29 @@
         <th>
             @Html.DisplayNameFor(model => model.Estado)
         </th>
+
+        <th>Acciones</th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <th>
-            @Html.DisplayFor(modelItem => item.Estado)
-        </th>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id, url = "http://localhost:56371/Servicio" }) |
-            @Html.ActionLink("Detalles", "Details", new { id = item.Id, url = "http://localhost:56371/Servicio" }) |
-            @Html.ActionLink("Borrar", "Delete", new { id = item.Id, url = "http://localhost:56371/Servicio" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Estado)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { item.Id }) |
+                @Html.ActionLink("Borrar", "Delete", new { item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
 
-<div>
-    <a href="/Servicio">Volver a la lista</a>
-</div>
